'kafka-Day05-KafkaAPIsStudy2'